<resources>
    <string name="app_name">ProjectCineYa</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="registrarse">Regístrate</string>
    <string name="iniciarsesion">Iniciar Sesión</string>
    <string name="correo">Correo</string>
    <string name="contraseña">Contraseña</string>
    <string name="sinregistrar">Aún no tienes cuenta? Registrarse</string>
    <string name="confirmarcontraseña">Confimar Contraseña</string>
    <string name="registrado">Ya tienes cuenta? Ingresar</string>
    <string name="guardando">Guardando...</string>
    <string name="agregar">Agregar</string>
    <string name="ingresanombrepeli">Ingresa el título</string>
    <string name="ingresadirector">Ingresa el director</string>
    <string name="ingresagenero">Ingresa el género</string>
    <string name="ingresacine">Ingresa el cine</string>
    <string name="guardar">Guardar</string>
    <string name="titulo">Título</string>
    <string name="director">Director</string>
    <string name="genero">Género</string>
    <string name="cargando">Cargando...</string>
    <string name="buscar">Buscar...</string>
    <string name="olvidastecontra">Olvidaste tu contraseña?</string>
    <string name="ingresacorreo">Ingresa tu correo electrónico</string>
    <string name="olvidemicontra">Olvidé mi contraseña</string>
    <string name="aquivatucorreo">Aquí va tu correo</string>
    <string name="cancelar">Cancelar</string>
    <string name="resetear">Resetear</string>
    <string name="imagendepelicula">Imagen de la película</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizando">Actualizando...</string>
    <string name="cineplanet">Cineplanet</string>
    <string name="cinemark">CineMark</string>
    <string name="cinepolis">Cinépolis</string>
    <string name="cine">Cine</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="btnUbicacion">Ver ubicación del cine</string>
    <string name="cinelabel">Cine :</string>
    <string name="directorlabel">Director :</string>
    <string name="generolabel">Género :</string>
    <string name="titulolabel">Título :</string>


</resources>