<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_newmovie"
    tools:context=".SubirActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/rellenoverde"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/subirimagen"
                android:layout_width="263dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/addmovie" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subirtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ingresanombrepeli">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subirDirector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ingresadirector">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/subirGenero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/ingresagenero">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checkedButton="@+id/radioCinemark">

                <RadioButton
                    android:id="@+id/radioCinemark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cinemark"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/radioCineplanet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cineplanet"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/radioCinepolis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/cinepolis"
                    android:textColor="@android:color/black" />

            </RadioGroup>

            <Button
                android:id="@+id/btn_guardar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/guardar"
                android:textSize="18sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</ScrollView>