<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_registro"
    tools:context=".RegistroActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="220dp"
            android:padding="20dp">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/registro_correo"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border"
            android:padding="8dp"
            android:hint="@string/correo"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/registro_password"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border"
            android:padding="8dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/registro_password2"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/border"
            android:padding="8dp"
            android:hint="@string/confirmarcontraseña"
            android:inputType="textPassword"
            android:drawablePadding="8dp"
            android:drawableLeft="@drawable/baseline_password_24"
            android:textColor="@color/black"
            />

            <Button
                android:id="@+id/btn_registrate"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/registrarse"
                android:textSize="18sp"
                 />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginRedirectText"
            android:text="@string/registrado"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>