<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detailmovie"

    tools:context=".DetalleActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_gravity="center_vertical"
        app:cardCornerRadius="5dp"

        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:orientation="vertical"
            android:background="@drawable/rellenoverde"
            android:padding="20dp">
    <TextView
        android:id="@+id/detalleTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bungee_shade"
        android:layout_marginBottom="12dp"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="34sp" />

    <ImageView
        android:id="@+id/detalleImagen"
        android:layout_width="263dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:contentDescription="@string/imagendepelicula"
        android:padding="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/addmovie"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lbldirectord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/directorlabel"
            android:fontFamily="@font/bungee_shade"
            android:textColor="@color/black"
            android:textSize="16sp"

            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/detalleDirector"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/border"
            android:gravity="start|center_vertical"
            android:hint="@string/ingresadirector"
            android:padding="16dp"

            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblgenerod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generolabel"
            android:fontFamily="@font/bungee_shade"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/detalleGenero"
            android:background="@drawable/border"
            android:padding="16dp"
            android:hint="@string/ingresagenero"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="25dp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblcined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinelabel"
            android:fontFamily="@font/bungee_shade"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/detalleCine"
            android:background="@drawable/border"
            android:padding="16dp"
            android:hint="@string/ingresacine"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="55dp"
            android:textColor="@color/black"/>

    </LinearLayout>



        <Button
            android:id="@+id/btnUbicacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:text="@string/btnUbicacion"
            android:layout_gravity="center"
            android:textColor="#37474F"
            tools:ignore="RtlSymmetry" />



        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:fab_size="normal"
            app:menu_colorNormal="@color/teal_700"
            app:menu_colorPressed="@color/verdepastel"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/baseline_format_list_bulleted_24"
            app:menu_openDirection="up"
            app:menu_showShadow="true">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_24"
                app:fab_colorNormal="@color/amarillopastel"
                app:fab_showShadow="true"
                app:fab_size="normal" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/btnEliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_delete_24"
                app:fab_colorNormal="@color/rojopastel"
                app:fab_showShadow="true"
                app:fab_size="normal" />

        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>