<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".LogeoActivity">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="320dp"
            android:padding="20dp">
            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/logeo_email"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:hint="@string/correo"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/logeo_password"
                android:layout_marginTop="30dp"
                android:background="@drawable/border"
                android:padding="8dp"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/btn_iniciarsesion"
                android:layout_width="350dp"
                android:layout_marginLeft="10dp"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:text="@string/iniciarsesion"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signupRedirectText"
                android:text="@string/sinregistrar"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:textColor="@color/white"/>




        </LinearLayout>



    </LinearLayout>








</ScrollView>
</LinearLayout>