<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@color/amarilloclaro">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/recImagen"
                android:src="@drawable/addmovie"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp">

                <TextView
                    android:layout_width="175dp"
                    android:layout_height="30dp"
                    android:id="@+id/recTitulo"
                    android:text="@string/titulo"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/recDirector"
                    android:text="@string/director"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:layout_marginTop="2dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/recGenero"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="55dp"
                android:text="@string/genero"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textAlignment="textEnd"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/recCine"
            android:layout_width="88dp"
            android:layout_height="30dp"
            android:layout_marginStart="65dp"
            android:layout_marginTop="50dp"

            android:text="@string/cine"
            android:textAlignment="center"
            android:visibility="gone"
            android:textSize="16sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
